# tcc

./: .gitignore  README.md  changelog.md  todo.md
cad/: aux_colunas.pfi
cad/arquivos-maristela/: mesa bolinhas_final1.cdr  mesa bolinhas_final2.cdr  mesa-de-luz-cilindrica_final.cdr  mesa-de-luz-cruz_final.cdr  tampos_final.cdr
documentos/proposta/: descricao-cnpq.txt
documentos/proposta-tcc/: relatorio-parcial.tex
documentos/proposta-tcc/theme/: leiame.txt  texstudio.desktop
documentos/proposta/img/: ufpr.eps
documentos/proposta/theme/: TeXstudio-monokai.txsprofile
documentos/relatorio-ic/: bibliografia.bib  relatorio-parcial.tex
documentos/tcc/: base-referencias.bib  utfpr-tcc.tex
hardware/controlador/: controlador.DsnWrk  controlador.PrjPcb  registradores.PrjPcb  registradores.SchDoc  super.PcbDoc  super.PrjPcb  super.SchDoc
hardware/mesa-bloco-2/: mesa-bloco-2.pdsprj
hardware/mesa-bloco-3/: mesa-bloco-3.pdsprj
hardware/registradores/: alimentacao.SchDoc  registradores-ABCD.SchDoc  registradores-EFGH.SchDoc  registradores-I.SchDoc  registradores.OutJob  registradores.PcbDoc  registradores.PrjPcb  registradores.PrjPcbStructure  registradores.SchDoc
hardware/super/: SUPER1.PcbDoc  SUPER2.PcbDoc  SUPER3.PcbDoc  leds.SchDoc  registrador.SchDoc  sempiternal.PcbDoc  sensores.SchDoc  super.PcbDoc  super.PrjPcb  super.SchDoc
hardware/super/docs/: calculos.xlsx  (+2 more)
source/mesa/: CMakeLists.txt  Makefile-user.mk
source/mesa/app/: application.cpp  matrix.cpp  sensors.cpp  uart.cpp
source/mesa/include/: plomodefs.h  plomotypes.h  sensors.h  tabmask8.h
(+81 files in other folders)
